--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,12 +58,53 @@
     <string name="AMenu4">Test de violencia de género</string>
     <string name="AMenu5">Test de abuso espiritual</string>
 
+    // Subsubmenus
+    <string name="VFMenu01">Lo que la violencia no es</string>
+    <string name="VFMenu02">El concepto de violencia</string>
+    <string name="VFMenu03">Tipos de violencia</string>
+    <string name="VFMenu04">Recursos bíblicos</string>
+    <string name="VFMenu05">Ideas pastorales contra la violencia</string>
+    <string name="VFMenu06">Evaluación</string>
 
     // Text
-    <string name="VF1">La violencia no es algo que ocurre solo en las noticias. Es más frecuente de lo que creemos. Sin embargo,
+    <string name="VF0">La violencia no es algo que ocurre solo en las noticias. Es más frecuente de lo que creemos. Sin embargo,
 para combatirla es necesario saber identificarla. En esta sesión aprenderás qué es la violencia, cómo ella
 actúa en las relaciones familiares, qué nos dice la Biblia sobre ella y algunos consejos pastorales para
 combatirla.</string>
+    <string name="VF01">La violencia no es una cuestión de percepción. Es un error pensar que la violencia es un concepto
+relativo, que depende de la percepción o susceptibilidad de las personas. De ser así, para unos gritar
+sería solo “alzar la voz”, o acosar sería lanzar un “piropo”. No es así. La violencia es un concepto preciso.
+La violencia no es el uso de la fuerza para defendernos. A veces una persona puede dañar a otra en
+defensa propia. Por ejemplo, una mujer puede arañar al esposo que intenta golpearla. Solo por haberlo
+arañado no puede decirse que ella fue violencia. Hay que tener cuidado de no culpabilizar a la víctima.
+Usar la fuerza en defensa propia no es violencia, sino agresión.</string>
+    <string name="VF02">La violencia es toda conducta que daña o amenaza con dañar a otras personas a través del abuso de
+poder.
+Existe daño cuando limitamos cualquier cosa que las personas son capaces de hacer. Por ejemplo: que
+puedan moverse, expresarse libremente, sentirse bien consigo mismas, decidir por sí mismas. Es posible
+identificar el daño a través del dolor o sentimiento de malestar de la persona.
+Existe abuso de poder cuando una persona usa su posición de dominio para imponer su voluntad sobre
+otras y no dejarlas decidir por sí mismas (autonomía). La posición de dominio es toda situación que pone
+al agresor en una posición de ventaja frente a la víctima. Por ejemplo: mayor fuerza física, mayor edad,
+tener una posición de autoridad, mayor conocimiento, mayor prestigio, gozar de la confianza de la
+víctima, etc.). La posición de dominio se impone cuando no se da a la otra persona la posibilidad de
+sentir, pensar o decidir sobre
+Es importante que como agentes pastorales aprendamos no solo a identificar el daño en las víctimas,
+sino también el abuso de poder de los agresores.</string>
 
+    <string name="VF04">¿Qué dice la Biblia sobre el concepto de violencia?
+En las Escrituras se establece el deber de amar al prójimo lo que implica, entre otras cosas, el deber de
+no dañarlo:/n“No debáis a nadie nada, sino el amaros unos a otros; porque el que ama al prójimo, ha cumplido la ley.
+Porque: No adulterarás, no matarás, no hurtarás, no dirás falso testimonio, no codiciarás, y cualquier
+otro mandamiento, en esta sentencia se resume: Amarás a tu prójimo como a ti mismo. El amor no hace
+mal al prójimo; así que el cumplimiento de la ley es el amor.” (Romanos 13:8-10).
+Además, en la Biblia, específicamente en el Antiguo Testamento, la violencia es concebida como un
+abuso de poder. La palabra hebrea que en nuestras Biblias se traduce como “violencia” es “JâMâS” (que
+aparece 60 veces en el AT). Lo interesante es que siempre que el Antiguo Testamento usa “JâMâS” lo
+hace para referirse al daño producido por unos más poderosos que otros. “Los agentes de JâMâS son
+siempre los opresores, los poderosos y privilegiados (Am 3:10; Miq 6.11-12; Ezq 7.11,19,23-34.). En el
+uso hebreo, aunque nos parezca extraño, no se habla de JâMâS cometido por los pobres y débiles, ni
+tampoco contra los poderosos
+Por tanto, la Biblia está de acuerdo con definir la violencia como un daño y como un abuso de poder.</string>
 
 </resources>
