Added expand/collapse functionality to each of the six buttons.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -178,8 +178,8 @@
         \n\n&#8226; Mantener un directorio actualizado con los teléfonos y direcciones de las
         instituciones públicas necesarias para efectuar una denuncia (Juzgado, Fiscalía, Comisaría,
         Centro de Emergencia Mujer).
-        \n&#8226; Contar con un equipo de profesionales (pueden ser miembros de la iglesia) a quienes
-        puedan derivarse algunos casos (psicólogos, abogados, etc.).
+        \n&#8226; Contar con un equipo de profesionales (pueden ser miembros de la iglesia) a
+        quienes puedan derivarse algunos casos (psicólogos, abogados, etc.).
         \n&#8226; La iglesia puede aliarse con otras organizaciones y ministerios que tengan más
         experiencia en la prevención y abordamiento de la violencia, a fin de capacitar a sus
         miembros.
