More refactoring (removing submenu activities, renaming IDs to reflect the new structure)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -985,7 +985,7 @@
         \n\nDiez razones por las que los evangélicos deberíamos dejar de hablar de “ideología de
         género”
         \nhttps://eleremita.lamula.pe/2018/10/01/diez-razones-por-las-que-los-evangelicos-deberiamos-de-hablar-de-ideologia-de-genero/eleremita/
-        \n\nGuía “Todo lo que siempre quisiste saber sobre la 'Ideología de Género'”
+        \n\nGuía “Todo lo que siempre quisiste saber sobre la <i>Ideología de Género</i>”
         \nhttp://www.gemrip.org/wp-content/uploads/2019/11/Folleto-Ideolog%C3%ADa-de-G%C3%A9nero-ligero.pdf
     </string>
     <string name="b6_4text">Guía “La fe no abusa”
@@ -1026,7 +1026,7 @@
         no es posible sin arrepentimiento (Lc 17:3) y es posible identificar el arrepentimiento
         cuando hay indignación, temor, anhelo, preocupación y disposición para que se haga justicia
         (2 Co 7:11).</string>
-    <string name="b7_2text"></string>
+    <string name="b7_2text">chart</string>
 <!--    TODO: make table with the mito/verdad section-->
     <string name="b7_3text">El texto de 1 Co 6:1-11 podría interpretarse como una especie de
         prohibición a los cristianos de recurrir a los tribunales públicos en busca de justicia.
